<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:background="@drawable/add"
    android:elevation="15dp"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbPresent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:outlineProvider="bounds"
            android:text="@string/present"
            android:textColor="@color/colorSecondaryText" />

        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/ic_menu_edit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvScoutNameFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/name_first_scout"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/tvScoutNameLast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/name_last_scout"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorSecondaryText" />
    </LinearLayout>

</LinearLayout>